# azure-compliance-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  compliance.py  pyproject.toml  query.py  server.py
.github/workflows/: ci.yml
providers/: __init__.py  base.py  factory.py  filtering.py  live.py  mock.py
scripts/: demo.py
tests/: test_check_compliance.py  test_demo_script.py  test_kql_builder.py  test_live_manual.py  test_provider_contract.py  test_providers.py  test_query_resources.py  test_server.py
